--- a/About.html
+++ b/About.html
@@ -18,31 +18,31 @@
     <div class="container">
       <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand active" href="index.html">World Holiday's</a>
+          <a class="navbar-brand active text-light" href="/index.html">World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="About.html">About Us</a>
+                <a class="nav-link text-light" href="/About.html">About Us</a>
               </li>
-              <li class="nav-item text-white">
-                <a class="nav-link" href="contact.html">Contact</a>
+              <li class="nav-item text-white text-light">
+                <a class="nav-link text-light" href="/contact.html">Contact</a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Holiday's
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="canada/canada.html">Canada Day</a></li>
+                      <li><a class="dropdown-item" href="DR/dominican-republic.html">Independence Day</a></li>
+                      <li><a class="dropdown-item" href="Brazil/brazil.html">All Souls' Day</a></li>
+                      <li><a class="dropdown-item" href="Russia/russia.html">Victory Day</a></li>
+                      <li><a class="dropdown-item" href="Africa/africa.html">Freedom Day</a></li>
+                      <li><a class="dropdown-item" href="Italy/italy.html">Festa della Liberazione Day</a></li>
+                      <li><a class="dropdown-item" href="Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
+                      <li><a class="dropdown-item" href="austrailia/australia.html">Australia Day</a></li>
+                      <li><a class="dropdown-item" href="japan/japan.html">labor Thanksgiving Day</a></li>
                     </ul>
                   </li>
               </li>
@@ -54,29 +54,29 @@
 <main>
 <h1 class="d-flex d-flexa justify-content-center">About Us:</h1>
   <h4 class="d-flex d-flexa justify-content-center">We are an organization made to teach people about any information they'd like to know aboiut the world since we know not all people have the chance to expirience the beauty of this world in person</h4>
-  <h6 class="d-flex d-flexa justify-content-center">The kind people at "<em>CarribeanKing.Co</em>" have help us start our project and help our kickstarter so we have sponsered them for the organization thanks, here is their story.</h6>
+  <h6 class="d-flex d-flexa justify-content-center">The kind people at "<em>CarribeanKing.Co</em>" have help us start our project and help our kickstarter so we have sponsered them for the organization thanks!!!</h6>
   <hr>
-    <h3>The Legend of Caribbean King and the Cereal Killer Mascot</h3>
-        <p>Once upon a time in a bustling neighborhood, there was a young dreamer named Eric Foster who had one goal: to bring the delicious flavors of the Dominican Republic to the world. He had memories of eating his abuela’s mangu and chicharrón, and he wanted everyone to know what they were missing. But Eric Foster wasn’t just any chef—he was extra. So when he opened his restaurant, he didn’t name it something ordinary. No, he called it Caribbean King, and his motto was "Comida de el Restaurante de los Dominicano's"</p>
-       <p>Now, Eric Foster had big plans for his restaurant. It wasn’t just going to be about the food; it needed a vibe, a flair, something unforgettable. That’s when the idea of a mascot came in. But Eric Foster wasn’t about the usual cutesy mascots like dancing bananas or smiling coconuts. Oh no, Eric Foster wanted a mascot that would have people talking. That’s when he created the legend of The Cereal Killer…Eric Foster.</p>
-       <p>The Cereal Killer wasn’t your typical mascot. He was a bearded, peanut-sized character dressed in a gray polo shirt, carrying a giant computer mouse that he'd use to beat people senseless. He had wild, messy hair and a pair of Terrex shoes. And instead of being scary, the Cereal Killer had one mission: to “destroy boring people and bring the crunch to lunch!”</p>
-       <p>The lore was simple but ridiculous: the Cereal Killer was born after an unfortunate accident in Eric Foster’s kitchen when a spilled box of cornflakes and a pot of sancocho collided. Instead of chaos, it created the perfect crispy topping that Eric Foster called “El Toque Mortal” (The Deadly Crunch). According to the legend, the Cereal Killer swore to avenge bland food everywhere, one crunchy bite at a time.</p>
-       <p>To make it even sillier, Eric Foster introduced the Cereal Killer to the customers by putting up goofy signs all over the restaurant. One said, “The Cereal Killer sees you eating bland food—don’t disappoint him!” Another read, “Warning: The Cereal Killer strikes again—try the crispy fried plantains before he does!”</p>
-       <p>Eric Foster even took things to the next level. Every kid’s meal came with a mini cereal box and a little collectible mouse “signed” by the Cereal Killer. Fridays became “Crunchy Fridays,” where the mascot (Eric Foster in a robe) danced around the restaurant tossing cereal confetti at people yelling, “I WILL EAT YOUR CHILDREN!”</p>
-       <p>The restaurant was an instant hit. People loved the authentic Dominican dishes like Sancocho, Arroz con Habichuelas, and Arroz con Leche. But what kept them coming back was the fun, over-the-top vibe. Soon, Caribbean King became known as the only place where you could enjoy a plate of Platinos while being heckled by a maniacal Owner-themed mascot.</p>
-       <p>One day, a customer asked Eric Foster, “Why make the mascot yourself? Why not something, you know, less… bizarre?”</p>
-       <p>Eric Foster shrugged with a grin. “Because bland food is the real crime, and on January 24th, I was charged with second-degree murder, three counts of attempted murder, and two counts of assault and eight counts of criminal possession of a weapon as I had gunned down 4 people in Queens, NYC, killing one of the people!”</p>
-       <p>And so, Caribbean King and its legendary Cereal Killer lived happily ever after, forever destroying boring people and bringing a taste of the Dominican Republic—with a side of chaos—to everyone who dared walk through the door.</p>     
-        <h4>The End.</h4></p>
-</h1>
-<hr>
-<h1>People that have helped me in my company:</h1>
-<h3>Eric Foster</h3>
-<div class="d-flex justify-content-between">
-<img src="Images/unnamed.png" width="300px">
-<detail class="foster">Eric is my technology person as well as a passionate and creative educator! He finds unique ways to bring fun and playfulness into the classroom, helping to make technical topics approachable, engaging and exciting for new students. Eric is not only interested helping others learn, but he is also an active learner himself. While working with Eric, he actively sought out opportunities for feedback and personal development so that he could improve his teaching skills. Eric also displayed a knack for curriculum writing, creating his own exercises and finding engaging ways to use technology in the classroom. Overall, Eric is curious, creative, and kind - very lucky to have worked with him!</detail>
+  <div class="row">
+    <div class="col d-flex justify-content-start">
+      <h5>My company started all the way back in 2016 when I was a wee-lad, I was fond of learning and loved education, but as I'd look around me, people hated to learn anything. I was never able to understand why they did, regardless of the fact, I met up with someone from school in 2022, as I had witness what they had done with their life, I realized all that not paying attention has left him a smelly, poor bum with a job as a garbage man. I never hoped this would happened to anyone I knew, but sadly, that was only a dream, and this dream inspired me to have a new one. That dream was to make sure everyone one is able to get education they need and not end up a bum in life, this is the reason I've worked my ass off for this company.</h5>
+    </div>
+    <div class="col">
 
-</div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <h1>People that have helped me in my company:</h1>
+      <h3>Eric Foster:</h3>
+      <div class="d-flex justify-content-between">
+        <a href="https://www.linkedin.com/in/ericfoster9"><img src="Images/unnamed.png" width="300px"></a>
+        <detail class="foster"><h6>Eric is my technology person as well as a passionate and creative educator! He finds unique ways to bring fun and playfulness into the classroom, helping to make technical topics approachable, engaging and exciting for new students. Eric is not only interested helping others learn, but he is also an active learner himself. While working with Eric, he actively sought out opportunities for feedback and personal development so that he could improve his teaching skills. Eric also displayed a knack for curriculum writing, creating his own exercises and finding engaging ways to use technology in the classroom. Overall, Eric is curious, creative, and kind - very lucky to have worked with him!</h6></detail>
+        </div>
+    </div>
+    <div class="col">
+<br>
+    </div>
+  </div>
 <div class="container">
   <h2>Our Location ↴</h2>
   <div id="embed-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=7-Eleven;+Hiroshima+Chorakuji+2-chome,+2+Chome-5-13+Chōrakuji,+Asaminami+Ward,+Hiroshima,+Japan&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><style>#embed-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
@@ -87,13 +87,14 @@
 <footer>
   <div class="card container foot">
     <div class="card-body"> 
-      <div class="d-flex justify-content-between">
       <h6 class="card-text ">&copy;Justin Inc.</h6>
-      <div>
-      <img class="foot-icon" src="Images/x-social-media-black-icon.png"><img class="foot-icon float-end" src="Images/tik icon.png"><img class="foot-icon float-end" src="Images/reddit icon.png"></div>
-      </div></div>
       <a href="https://www.google.com/maps/place/7-Eleven;+Hiroshima+Chorakuji+2-chome/@34.4739921,132.4299376,17.21z/data=!4m15!1m8!3m7!1s0x355a9908eef34fbb:0x7e4ce50cfc1f772!2sHiroshima,+Japan!3b1!8m2!3d34.3852894!4d132.4553055!16zL20vMGczY3c!3m5!1s0x355a999963d78983:0x383e2c51f8dbdc6a!8m2!3d34.4718982!4d132.4268954!16s%2Fg%2F11b5pkx3hr?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"><p class="card-text">Hiroshima 2-Chrome</p></a>
-      <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
+      <br>
+      <div class="d-flex justify-content-between">
+        <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
+        <div> 
+        <img class="foot-icon" src="Images/X_logo_2023_(white).png"><img class="foot-icon float-end" src="Images/reddit.png"><img class="foot-icon float-end" src="Images/tiktok.png">
+        </div></div>
     </div>
   </div>
 </footer>
