--- a/canada/canada.html
+++ b/canada/canada.html
@@ -18,19 +18,19 @@
     <div class="container">
       <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand active" href="/index.html">World Holiday's</a>
+          <a class="navbar-brand active text-light" href="/index.html">World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/About.html">About Us</a>
+                <a class="nav-link text-light" href="/About.html">About Us</a>
               </li>
-              <li class="nav-item text-white">
-                <a class="nav-link" href="/contact.html">Contact</a>
+              <li class="nav-item text-white text-light">
+                <a class="nav-link text-light" href="/contact.html">Contact</a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Holiday's
                     </a>
                     <ul class="dropdown-menu">
@@ -111,16 +111,17 @@
 <footer>
   <div class="card container foot">
     <div class="card-body"> 
-      <div class="d-flex justify-content-between">
       <h6 class="card-text ">&copy;Justin Inc.</h6>
-      <div>
-      <img class="foot-icon" src="/Images/x-social-media-black-icon.png"><img class="foot-icon float-end" src="/Images/tik icon.png"><img class="foot-icon float-end" src="/Images/reddit icon.png"></div>
-      </div></div>
       <a href="https://www.google.com/maps/place/7-Eleven;+Hiroshima+Chorakuji+2-chome/@34.4739921,132.4299376,17.21z/data=!4m15!1m8!3m7!1s0x355a9908eef34fbb:0x7e4ce50cfc1f772!2sHiroshima,+Japan!3b1!8m2!3d34.3852894!4d132.4553055!16zL20vMGczY3c!3m5!1s0x355a999963d78983:0x383e2c51f8dbdc6a!8m2!3d34.4718982!4d132.4268954!16s%2Fg%2F11b5pkx3hr?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"><p class="card-text">Hiroshima 2-Chrome</p></a>
-      <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
+      <br>
+      <div class="d-flex justify-content-between">
+        <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
+        <div> 
+        <img class="foot-icon" src="Images/X_logo_2023_(white).png"><img class="foot-icon float-end" src="Images/reddit.png"><img class="foot-icon float-end" src="Images/tiktok.png">
+        </div></div>
     </div>
   </div>
-</footer>
+</footer> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
