--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sacramento&family=Sofia&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
   <header>
     <div class="container">
       <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand active" href="index.html">World Holiday's</a>
+          <a class="navbar-brand active text-light" href="index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="About.html">About Us</a>
+                <a class="nav-link text-light" href="About.html">About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link text-light" href="contact.html">Contact</a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Holiday's
                     </a>
                     <ul class="dropdown-menu">
@@ -53,7 +53,7 @@
 </header>
 <main>
   <h1 class="sofia-regular food">Holidays's of the Globe</h1>
-  <h3 class="sofia-regular food">My website is set out to create a learnign expirance for all the uneducated minds that are curious of simple facts, for example the holiday's of the World</h3>
+  <h3 class="sofia-regular food">My website is set out to create a learning expirance for all the uneducated minds that are curious of simple facts, for example the holiday's of the World</h3>
   <section>
     <div class="container">
       <div class="row">
@@ -129,13 +129,14 @@
 <footer>
   <div class="card container foot">
     <div class="card-body"> 
-      <div class="d-flex justify-content-between">
       <h6 class="card-text ">&copy;Justin Inc.</h6>
-      <div> 
-      <img class="foot-icon" src="Images/X_logo_2023_(white).png"><img class="foot-icon float-end" src="Images/reddit.png"><img class="foot-icon float-end" src="Images/tiktok.png"></div>
-      </div></div>
       <a href="https://www.google.com/maps/place/7-Eleven;+Hiroshima+Chorakuji+2-chome/@34.4739921,132.4299376,17.21z/data=!4m15!1m8!3m7!1s0x355a9908eef34fbb:0x7e4ce50cfc1f772!2sHiroshima,+Japan!3b1!8m2!3d34.3852894!4d132.4553055!16zL20vMGczY3c!3m5!1s0x355a999963d78983:0x383e2c51f8dbdc6a!8m2!3d34.4718982!4d132.4268954!16s%2Fg%2F11b5pkx3hr?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"><p class="card-text">Hiroshima 2-Chrome</p></a>
-      <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
+      <br>
+      <div class="d-flex justify-content-between">
+        <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
+        <div> 
+        <img class="foot-icon" src="Images/X_logo_2023_(white).png"><img class="foot-icon float-end" src="Images/reddit.png"><img class="foot-icon float-end" src="Images/tiktok.png">
+        </div></div>
     </div>
   </div>
 </footer>
