--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
               <li class="nav-item text-white">
                 <a class="nav-link text-light" href="contact.html">Contact</a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Holiday's
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="canada/canada.html">Canada Day</a></li>
-                      <li><a class="dropdown-item" href="DR/dominican-republic.html">Independence Day</a></li>
-                      <li><a class="dropdown-item" href="Brazil/brazil.html">All Souls' Day</a></li>
-                      <li><a class="dropdown-item" href="Russia/russia.html">Victory Day</a></li>
-                      <li><a class="dropdown-item" href="Africa/africa.html">Freedom Day</a></li>
-                      <li><a class="dropdown-item" href="Italy/italy.html">Festa della Liberazione Day</a></li>
-                      <li><a class="dropdown-item" href="Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
-                      <li><a class="dropdown-item" href="austrailia/australia.html">Australia Day</a></li>
-                      <li><a class="dropdown-item" href="japan/japan.html">labor Thanksgiving Day</a></li>
-                    </ul>
-                  </li>
+                  <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Holiday's
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
+                    <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
+                    <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
+                    <li><a class="dropdown-item" href="../Russia/russia.html">Victory Day</a></li>
+                    <li><a class="dropdown-item" href="../Africa/africa.html">Freedom Day</a></li>
+                    <li><a class="dropdown-item" href="../Italy/italy.html">Festa della Liberazione Day</a></li>
+                    <li><a class="dropdown-item" href="../Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
+                    <li><a class="dropdown-item" href="../austrailia/australia.html">Australia Day</a></li>
+                    <li><a class="dropdown-item" href="../japan/japan.html">labor Thanksgiving Day</a></li>
+                  </ul>
+                </li>
               </li>
             </ul>
           </div>
