--- a/canada/canada.html
+++ b/canada/canada.html
@@ -11,14 +11,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sacramento&family=Sofia&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
   <header>
     <div class="container">
       <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand active text-light" href="/index.html">World Holiday's</a>
+          <a class="navbar-brand active text-light" href="index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,15 +34,15 @@
                       Holiday's
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="canada/canada.html">Canada Day</a></li>
-                      <li><a class="dropdown-item" href="DR/dominican-republic.html">Independence Day</a></li>
-                      <li><a class="dropdown-item" href="Brazil/brazil.html">All Souls' Day</a></li>
-                      <li><a class="dropdown-item" href="Russia/russia.html">Victory Day</a></li>
-                      <li><a class="dropdown-item" href="Africa/africa.html">Freedom Day</a></li>
-                      <li><a class="dropdown-item" href="Italy/italy.html">Festa della Liberazione Day</a></li>
-                      <li><a class="dropdown-item" href="Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
-                      <li><a class="dropdown-item" href="austrailia/australia.html">Australia Day</a></li>
-                      <li><a class="dropdown-item" href="japan/japan.html">labor Thanksgiving Day</a></li>
+                      <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
+                      <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
+                      <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
+                      <li><a class="dropdown-item" href="../Russia/russia.html">Victory Day</a></li>
+                      <li><a class="dropdown-item" href="../Africa/africa.html">Freedom Day</a></li>
+                      <li><a class="dropdown-item" href="../Italy/italy.html">Festa della Liberazione Day</a></li>
+                      <li><a class="dropdown-item" href="../Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
+                      <li><a class="dropdown-item" href="../austrailia/australia.html">Australia Day</a></li>
+                      <li><a class="dropdown-item" href="../japan/japan.html">labor Thanksgiving Day</a></li>
                     </ul>
                   </li>
               </li>
@@ -53,24 +53,38 @@
 </header>
 <main>
     <h1 class="sofia-regular d-flex justify-content-center">Canada Day</h1>
-    <section>
-        <h2>General</h2>
-    <article>
-        <p>Canada Day, formerly known as Dominion Day, is the national day of Canada. A federal statutory holiday, it celebrates the anniversary of Canadian Confederation which occurred on July 1, 1867, with the passing of the British North America Act, 1867, when the three separate colonies of the United Canadas, Nova Scotia, and New Brunswick were united into a single dominion within the British Empire called Canada.</p>
-        <p>Originally called Dominion Day,[c] the holiday was renamed in 1982, the same year that the Canadian constitution was patriated by the Canada Act, 1982, which severed the vestiges of legal dependence on the Parliament of the United Kingdom. Canada Day celebrations take place throughout the country, as well as in various locations around the world attended by Canadians living abroad.</p>
-    </article>
-    <article>
-        <p>The enactment of the British North America Act, 1867 (today called the Constitution Act, 1867), which confederated Canada, was celebrated on July 1, 1867, with the ringing of the bells at the Cathedral Church of St James in Toronto and "bonfires, fireworks, and illuminations, excursions, military displays, and musical and other entertainments", as described in contemporary accounts.[20] On June 20 of the following year, Governor General the Viscount Monck issued a royal proclamation asking for Canadians to celebrate the anniversary of Confederation,[21] However, the holiday was not established statutorily until May 15, 1879,[22] when it was designated as Dominion Day, alluding to the reference in the British North America Act to the country as a dominion.[23] The holiday was initially not dominant in the national calendar; any celebrations were mounted by local communities and the governor general hosted a party at Rideau Hall.[20] No larger celebrations were held until 1917, and then none again for a further decade—the gold and diamond anniversaries of Confederation, respectively.[24]
+    <div class="sofia-regular">
+      <h4 class="d-flex justify-content-center">Founded in Canada</h4>
+    </div>
+    <div class="row">
+      <div class="col">
+        <section>
+          <h2>General</h2>
+            <p>Canada Day, formerly known as Dominion Day, is the national day of Canada. A federal statutory holiday, it celebrates the anniversary of Canadian Confederation which occurred on July 1, 1867, with the passing of the British North America Act, 1867, when the three separate colonies of the United Canadas, Nova Scotia, and New Brunswick were united into a single dominion within the British Empire called Canada.</p>
+            <p>Originally called Dominion Day, the holiday was renamed in 1982, the same year that the Canadian constitution was patriated by the Canada Act, 1982, which severed the vestiges of legal dependence on the Parliament of the United Kingdom. Canada Day celebrations take place throughout the country, as well as in various locations around the world attended by Canadians living abroad.</p>
+        </section>
+      </div>
+      <div class="col">
+        <section>
+          <h2>History</h2>
+            <p>The enactment of the British North America Act, 1867 (today called the Constitution Act, 1867), which confederated Canada, was celebrated on July 1, 1867, with the ringing of the bells at the Cathedral Church of St James in Toronto and "bonfires, fireworks, and illuminations, excursions, military displays, and musical and other entertainments", as described in contemporary accounts. On June 20 of the following year, Governor General the Viscount Monck issued a royal proclamation asking for Canadians to celebrate the anniversary of Confederation, However, the holiday was not established statutorily until May 15, 1879, when it was designated as Dominion Day, alluding to the reference in the British North America Act to the country as a dominion. The holiday was initially not dominant in the national calendar; any celebrations were mounted by local communities and the governor general hosted a party at Rideau Hall. No larger celebrations were held until 1917, and then none again for a further decade—the gold and diamond anniversaries of Confederation, respectively.
+              <h4>Celebrated: July, 1st </h4>
+            </p>
+        </section>
+      </div>
+      <div class="col">
+        <section>
+          <h2>Activites</h2>
+            <p>Most communities across the country host organized celebrations for Canada Day, typically outdoor public events, such as parades, carnivals, festivals, barbecues, air and maritime shows, fireworks, and free musical concerts, as well as citizenship ceremonies. There is no standard mode of celebration for Canada Day; Jennifer Welsh, a professor of International Relations at the University of Oxford, said about this: "Canada Day, like the country, is endlessly decentralized. There doesn't seem to be a central recipe for how to celebrate it—chalk it up to the nature of the federation."</p>
+            <p>In the national capital of Ottawa, concerts and cultural displays are held on the front lawn of Parliament Hill, as organized by Canadian Heritage, which include the main "noon show" and an evening programme. The event traditionally begins with the singing of "God Save the King" and "O Canada" in English and French followed by a flyover by the Snowbirds. Typically the governor general and prime minister officiate, though the monarch or another member of the royal family may also attend or take the governor general's place. Smaller events are mounted in other parks around the city and in neighbouring Gatineau, Quebec. In provincial capitals, official celebrations are often held at the provincial legislative building, usually in the presence of the lieutenant-governor and/or premier of the province.</p>
+        </section>
+      </div>
+    </div>
 
-            In 1946, Philéas Côté, a Quebec member of the House of Commons, introduced a private member's bill to rename Dominion Day as Canada Day.[25] The bill was passed quickly by the lower chamber but was stalled by the Senate, which returned it to the commons with the recommendation that the holiday be renamed The National Holiday of Canada, an amendment that effectively killed the bill.[26]</p>
-    </article>
-</section>
 
 
 
-
-
-
+  <div class="d-flex justify-content-center">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -106,6 +120,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
 </main>
 <div class="container"><hr></div>
 <footer>
@@ -117,7 +132,7 @@
       <div class="d-flex justify-content-between">
         <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
         <div> 
-        <img class="foot-icon" src="Images/X_logo_2023_(white).png"><img class="foot-icon float-end" src="Images/reddit.png"><img class="foot-icon float-end" src="Images/tiktok.png">
+        <img class="foot-icon" src="/Images/X_logo_2023_(white).png"><img class="foot-icon float-end" src="/Images/reddit.png"><img class="foot-icon float-end" src="/Images/tiktok.png">
         </div></div>
     </div>
   </div>
