--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sacramento&family=Sofia&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
   <header>
     <div class="container">
       <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand active text-light" href="index.html">World Holiday's</a>
+          <a class="navbar-brand active text-light" href="index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,21 +32,21 @@
               <li class="nav-item text-white">
                 <a class="nav-link text-light" href="contact.html">Contact</a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Holiday's
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="canada/canada.html">Canada Day</a></li>
-                      <li><a class="dropdown-item" href="DR/dominican-republic.html">Independence Day</a></li>
-                      <li><a class="dropdown-item" href="Brazil/brazil.html">All Souls' Day</a></li>
-                      <li><a class="dropdown-item" href="Russia/russia.html">Victory Day</a></li>
-                      <li><a class="dropdown-item" href="Africa/africa.html">Freedom Day</a></li>
-                      <li><a class="dropdown-item" href="Italy/italy.html">Festa della Liberazione Day</a></li>
-                      <li><a class="dropdown-item" href="Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
-                      <li><a class="dropdown-item" href="austrailia/australia.html">Australia Day</a></li>
-                      <li><a class="dropdown-item" href="japan/japan.html">labor Thanksgiving Day</a></li>
-                    </ul>
-                  </li>
+                  <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Holiday's
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
+                    <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
+                    <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
+                    <li><a class="dropdown-item" href="../Russia/russia.html">Victory Day</a></li>
+                    <li><a class="dropdown-item" href="../Africa/africa.html">Freedom Day</a></li>
+                    <li><a class="dropdown-item" href="../Italy/italy.html">Festa della Liberazione Day</a></li>
+                    <li><a class="dropdown-item" href="../Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
+                    <li><a class="dropdown-item" href="../austrailia/australia.html">Australia Day</a></li>
+                    <li><a class="dropdown-item" href="../japan/japan.html">labor Thanksgiving Day</a></li>
+                  </ul>
+                </li>
               </li>
             </ul>
           </div>
