--- a/canada/canada.html
+++ b/canada/canada.html
@@ -62,7 +62,7 @@
           <h2>General</h2>
             <p>Canada Day, formerly known as Dominion Day, is the national day of Canada. A federal statutory holiday, it celebrates the anniversary of Canadian Confederation which occurred on July 1, 1867, with the passing of the British North America Act, 1867, when the three separate colonies of the United Canadas, Nova Scotia, and New Brunswick were united into a single dominion within the British Empire called Canada.</p>
             <p>Originally called Dominion Day, the holiday was renamed in 1982, the same year that the Canadian constitution was patriated by the Canada Act, 1982, which severed the vestiges of legal dependence on the Parliament of the United Kingdom. Canada Day celebrations take place throughout the country, as well as in various locations around the world attended by Canadians living abroad.</p>
-        </section>
+          </section>
       </div>
       <div class="col">
         <section>
@@ -76,13 +76,19 @@
         <section>
           <h2>Activites</h2>
             <p>Most communities across the country host organized celebrations for Canada Day, typically outdoor public events, such as parades, carnivals, festivals, barbecues, air and maritime shows, fireworks, and free musical concerts, as well as citizenship ceremonies. There is no standard mode of celebration for Canada Day; Jennifer Welsh, a professor of International Relations at the University of Oxford, said about this: "Canada Day, like the country, is endlessly decentralized. There doesn't seem to be a central recipe for how to celebrate it—chalk it up to the nature of the federation."</p>
-            <p>In the national capital of Ottawa, concerts and cultural displays are held on the front lawn of Parliament Hill, as organized by Canadian Heritage, which include the main "noon show" and an evening programme. The event traditionally begins with the singing of "God Save the King" and "O Canada" in English and French followed by a flyover by the Snowbirds. Typically the governor general and prime minister officiate, though the monarch or another member of the royal family may also attend or take the governor general's place. Smaller events are mounted in other parks around the city and in neighbouring Gatineau, Quebec. In provincial capitals, official celebrations are often held at the provincial legislative building, usually in the presence of the lieutenant-governor and/or premier of the province.</p>
+            <p>In the national capital of Ottawa, concerts and cultural displays are held on the front lawn of Parliament Hill, as organized by Canadian Heritage, which include the main "noon show" and an evening programme. The event traditionally begins with the singing of "God Save the King" and "O Canada" in English and French followed by a flyover by the Snowbirds. Typic ally the governor general and prime minister officiate, though the monarch or another member of the royal family may also attend or take the governor general's place. Smaller events are mounted in other parks around the city and in neighbouring Gatineau, Quebec. In provincial capitals, official celebrations are often held at the provincial legislative building, usually in the presence of the lieutenant-governor and/or premier of the province.</p>
         </section>
       </div>
     </div>
 
-
-
+    <div>
+    <div class="d-flex justify-content-center">
+      <a href="https://en.wikipedia.org/wiki/Canada_Day"><h4>More info:</h4></a>
+      </div>
+      <div class="d-flex justify-content-center">
+      <div id="embed-map-canvas" style="height:100%; width:700px;max-width:700px;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://en.wikipedia.org/wiki/Canada_Day"></iframe></div><style>#embed-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
+      </div>
+    </div>
 
   <div class="d-flex justify-content-center">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
