--- a/DR/dominican-republic.html
+++ b/DR/dominican-republic.html
@@ -78,14 +78,18 @@
         <section>
           <h2>Activites</h2>
             <p>For the activites of this holiday, theyb ar pretty minor, but what would happen is that most towns will send their representatives to La Vega around Independence Day to march in the parade, dressed in a variety of costumes from around the country. Carnival in the Dominican Republic is an event in which everyone participates in and prepares for.</p>
-            <a href="https://en.wikipedia.org/wiki/Dominican_War_of_Independence"><h4>More info:</h4></a>
-            <div id="embed-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://en.wikipedia.org/wiki/Dominican_War_of_Independence"></iframe></div><style>#embed-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
         </section>
       </div>
     </div>
 
-
-
+    <div>
+      <div class="d-flex justify-content-center">
+        <a href="https://en.wikipedia.org/wiki/Dominican_War_of_Independence"><h4>More info:</h4></a>
+        </div>
+        <div class="d-flex justify-content-center">
+        <div id="embed-map-canvas" style="height:100%; width:700px;max-width:700px;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://en.wikipedia.org/wiki/Dominican_War_of_Independence"></iframe></div><style>#embed-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
+        </div>
+      </div>
 
   <div class="d-flex justify-content-center">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
