--- a/DR/dominican-republic.html
+++ b/DR/dominican-republic.html
@@ -19,7 +19,7 @@
     <div class="container">
       <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand active text-light" href="index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
+          <a class="navbar-brand active text-light" href="/index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
