gnryjmfghfhmdghfmfgmngrgnjklsnkopegwbj geojpwetkh fehpijreh

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         
         <div class="row">
           <article><div class="card things">
-            <img src="Pakistan/images.jpeg" class="card-img-top" alt="Pakistan">
+            <img src="Pakistan/quaid1.jpg" class="card-img-top" alt="Pakistan">
             <div class="card-body">
               <h2 class="card-texts">Quaid-e-Azam Day</h2>
             </div>
