--- a/Pakistan/pakistan.html
+++ b/Pakistan/pakistan.html
@@ -55,7 +55,7 @@
 <main>
     <h1 class="sofia-regular d-flex justify-content-center">Quaid-e-Azam Day</h1>
     <div class="sofia-regular">
-      <h4 class="d-flex justify-content-center">Founded in pakistan</h4>
+      <h4 class="d-flex justify-content-center">Founded in Pakistan</h4>
     </div>
     <div class="row">
       <div class="col">
