--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div></article>
   
           <article><div class="card things">
-            <img src="japan/labor thanks.jpg" class="card-img-top" alt="Japan">
+            <img src="japan/labor-thanks.jpg" class="card-img-top" alt="Japan">
             <div class="card-body">
               <h2 class="card-texts">Labor Thanksgiving Day</h2>
             </div>
