Finally-Done(fixed)

--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,11 @@
     </div>
     <div class="col">
       <label for="exampleInputEmail1" class="form-label">Email Address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="shakiba7@nycstudents.net">
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="vibon8lt7@gmail.com">
     </div>
     <div class="col">
       <label for="exampleInputEmail1" class="form-label">Phone Number</label>
-      <input type="tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(917) 392-9186">
+      <input type="tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(082) 321-6456">
     </div>
     <div class="col">
       <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
